--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         darkThemeToggler: true,
         detectSystemDarkTheme: true,
         editLinkBase: "https://github.com/mika-f/docs.mochizuki.moe/tree/master/public",
-        editLinkText: "Edit this page on GitHub",
+        editLinkText: "GitHub でドキュメントを修正する",
         router: {
           mode: "history"
         },
