--- a/public/index.html
+++ b/public/index.html
@@ -18,30 +18,30 @@
         editLinkBase: "https://github.com/mika-f/docs.mochizuki.moe/tree/master/public",
         editLinkText: "GitHub でドキュメントを修正する",
         router: {
-          mode: "history"
+          mode: "history",
         },
         sourcePath: "/",
         nav: [{ title: "ホーム", link: "/" }],
         sidebar: [
           {
             title: "ホーム",
-            link: "/"
+            link: "/",
           },
           {
             title: "VRChat",
             children: [
               {
                 title: "Inventory System",
-                link: "/VRChat/InventorySystem"
-              }
-            ]
-          }
+                link: "/VRChat/InventorySystem",
+              },
+            ],
+          },
         ],
         footer: `
           <footer style="border-top: 1px solid var(--border-color); padding-top: 10px; color: #999; font-size: 90%;">
             &copy; ${new Date().getFullYear()} Fuyuno Mikazuki / Natsuneko. Rendered by <a href='https://docute.org' target='_blank'>Docute</a>.
           </footer>
-        `
+        `,
       });
     </script>
   </body>
