chore: Add Terms of Service for Unity Logic

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,15 @@
               },
             ],
           },
+          {
+            title: "各種利用規約",
+            children: [
+              {
+                title: "Unity Logic (Rev: 20200606)",
+                link: "/Terms/UnityLogic_R20200606",
+              },
+            ],
+          },
         ],
         footer: `
           <footer style="border-top: 1px solid var(--border-color); padding-top: 10px; color: #999; font-size: 90%;">
