feat: add terms and documents

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,15 @@
             link: "/",
           },
           {
+            title: "Unity",
+            children: [
+              {
+                title: "Variation Packager",
+                link: "/Unity/VariationPackager",
+              },
+            ],
+          },
+          {
             title: "VRChat",
             children: [
               {
