fix: fix document

--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,10 @@
             title: "各種利用規約",
             children: [
               {
+                title: "Unity Editor (Rev: 20200630)",
+                link: "/Terms/UnityEditor_R20200630",
+              },
+              {
                 title: "Unity Logic (Rev: 20200606)",
                 link: "/Terms/UnityLogic_R20200606",
               },
