feat: add FukidashiSystem

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,10 @@
                 title: "Inventory System",
                 link: "/VRChat/InventorySystem",
               },
+              {
+                title: "Fukidashi System",
+                link: "/VRChat/FukidashiSystem",
+              },
             ],
           },
           {
