docs: add AssetMerger

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,10 @@
             title: "VRChat",
             children: [
               {
+                title: "Asset Merger",
+                link: "/VRChat/AssetMerger",
+              },
+              {
                 title: "Inventory System",
                 link: "/VRChat/InventorySystem",
               },
