chore: add ConstraintByHumanoid

--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,10 @@
             title: "Unity",
             children: [
               {
+                title: "Constraint by Humanoid",
+                link: "/Unity/ConstraintByHumanoid",
+              },
+              {
                 title: "Variation Packager",
                 link: "/Unity/VariationPackager",
               },
@@ -74,5 +78,15 @@
         `,
       });
     </script>
+    <style>
+      figure {
+        display: flex;
+        flex-flow: column;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        margin: auto;
+      }
+    </style>
   </body>
 </html>
