chore: update documents

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
         detectSystemDarkTheme: true,
         editLinkBase: "https://github.com/mika-f/docs.mochizuki.moe/tree/master/public",
         editLinkText: "GitHub でドキュメントを修正する",
+        highlight: ["csharp"],
         router: {
           mode: "history",
         },
@@ -46,6 +47,10 @@
               {
                 title: "Asset Merger",
                 link: "/VRChat/AssetMerger",
+              },
+              {
+                title: "Extensions Library",
+                link: "/VRChat/ExtensionsLibrary",
               },
               {
                 title: "Fukidashi System",
