feat: use Docsify

--- a/public/index.html
+++ b/public/index.html
@@ -92,6 +92,10 @@
         width: 100%;
         margin: auto;
       }
+
+      figcaption {
+        font-size: 80%;
+      }
     </style>
   </body>
 </html>
