--- a/public/VRChat/AssetMerger/index.html
+++ b/public/VRChat/AssetMerger/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>Asset Merger | ねこのやどきゅめんと</title>
-    <link rel="stylesheet" href="https://unpkg.com/docsify@4/themes/dark.css" />
+    <link rel="stylesheet" href="https://unpkg.com/docsify-themeable@0/dist/css/theme-simple-dark.css" />
     <link rel="stylesheet" href="/global.css" />
   </head>
   <body>
@@ -11,6 +11,6 @@
     <script src="https://unpkg.com/docsify-edit-on-github@1/index.js"></script>
     <script src="/VRChat/AssetMerger/docsify.js"></script>
     <script src="https://unpkg.com/docsify@4/lib/docsify.min.js"></script>
-    <script src="https://unpkg.com/docsify@4/lib/plugins/zoom-image.min.js"></script>
+    <script src="https://unpkg.com/docsify@4.9/lib/plugins/zoom-image.min.js"></script>
   </body>
 </html>
