--- a/public/VRChat/AssetMerger/index.html
+++ b/public/VRChat/AssetMerger/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="https://unpkg.com/docsify-edit-on-github@1/index.js"></script>
+    <script src="/docsify.js"></script>
     <script src="/VRChat/AssetMerger/docsify.js"></script>
     <script src="https://unpkg.com/docsify@4/lib/docsify.min.js"></script>
     <script src="https://unpkg.com/docsify@4.9/lib/plugins/zoom-image.min.js"></script>
