--- a/public/UdonRabbit/index.html
+++ b/public/UdonRabbit/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>SDK2 Compat View | ねこのやどきゅめんと</title>
+    <title>VRChat UdonRabbit | ねこのやどきゅめんと</title>
     <link rel="stylesheet" href="https://unpkg.com/docsify-themeable@0/dist/css/theme-simple-dark.css" />
     <link rel="stylesheet" href="/global.css" />
   </head>
