--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,7 +1,1 @@
-{% extends "base.html" %} {% block announce %}
-
-<a href="{{ '/announcement/20210422-stop-distribution-of-all-products-in-natsuneko-laboratory/' | url }}" class="">
-  2021/05/01 より、すべての商品の配布を停止します。詳しくはこちらを参照ください。
-</a>
-
-{% endblock %}
+{% extends "base.html" %}
